@@ -1,5 +1,5 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.sdarot.tv" name="Sdarot.tv Video" version="2.1.6" provider-name="cubicle">
+<addon id="plugin.video.sdarot.tv" name="Sdarot.tv Video" version="2.1.7" provider-name="cubicle">
     <requires>
         <import addon="xbmc.python" version="2.1.0"/>
 		 	<import addon="script.common.plugin.cache" version="2.5.2" />
